+ Step Tranforms are now parsed like Step Definitions.  Created a copy of the templates for them as well.

--- a/templates/default/module/html/step_definitions.erb
+++ b/templates/default/module/html/step_definitions.erb
@@ -1,7 +1,7 @@
-<% if object.steps %>
-  <h2>Steps</h2>
+<% if object.step_definitions %>
+  <h2>Step Definitions</h2>
   <dl class="constants">
-    <% object.steps.each do |step| %>
+    <% object.step_definitions.each do |step| %>
 	  <dt>
 	    <span style="font-weight: normal;"><%= step.predicate %></span>
 		<span style="constants"><%= step.value %></span>
