+ Step definitions with constants will now link to other constants.  This will match the first one regardless of namespace, so this could possibly point to the wrong constant if there was one with the same name in a different namespace.
- Does not consider namespaces
- Constants with spaces around it or more than one constant in the same space will cause issues.

--- a/templates/default/module/html/step_definitions.erb
+++ b/templates/default/module/html/step_definitions.erb
@@ -1,8 +1,8 @@
 <% if object.step_definitions %>
   <h2>Step Definitions</h2>
   <dl class="constants">
-    <% object.step_definitions.each do |step| %>
-	  <dt>
+    <%  @steps.each do |step| %>
+	  <dt id="<%= anchor_for(step) %>">
 	    <span style="font-weight: normal;"><%= step.predicate %></span>
 		<span style="constants"><%= step.value %></span>
 	  </dt>
@@ -21,3 +21,4 @@
 </table>
   
 <% end %>
+
