--- a/templates/default/module/html/step_definitions.erb
+++ b/templates/default/module/html/step_definitions.erb
@@ -1,7 +1,7 @@
 <% if object.step_definitions %>
   <h2>Step Definitions</h2>
   <dl class="constants">
-    <%  @steps.each do |step| %>
+    <%  @step_defs.each do |step| %>
 	  <dt id="<%= anchor_for(step) %>">
 	    <span style="font-weight: normal;"><%= step.predicate %></span>
 		<span style="constants"><%= step.value %></span>
