Added features and scenarios to the doc.  Right now the templates for both simply show the tags, titles and any descriptions or non-steps that they have with them -Fixed an issue with the background not appearing the docs.

--- a/templates/default/module/html/step_definitions.erb
+++ b/templates/default/module/html/step_definitions.erb
@@ -4,7 +4,7 @@
     <%  @step_defs.each do |step| %>
 	  <dt id="<%= anchor_for(step) %>">
 	    <span style="font-weight: normal;"><%= step.predicate %></span>
-		<span style="constants"><%= step.value %></span>
+		<span style="constants"><%= step.value_as_link %></span>
 	  </dt>
 	  <dd><pre class="code"><%= step.source %></pre></dd>
     <% end %>
