Pulled the yard_extensions into three files. Adding the tests for the feature parser section before continuing as more than one feature is not being returned so I want to lock down the functionality before I start twiddling the bits to massage it to work with YARD.

--- a/templates/default/fulldoc/html/full_list_features.erb
+++ b/templates/default/fulldoc/html/full_list_features.erb
@@ -1,7 +1,7 @@
 <% n = 1 %>
 <% @features.each do |feature| %>
   <li class="r<%= n %>">
-    <%= linkify feature, feature.name(true) %> 
+	<a href="<%= feature.name %>"><%= feature.value %></a>
   </li>
   <% n = n == 2 ? 1 : 2 %>
 <% end %>
