--- a/templates/default/module/html/steps.erb
+++ b/templates/default/module/html/steps.erb
@@ -3,7 +3,7 @@
   <dl class="constants">
     <% object.steps.each do |step| %>
 	  <dt>
-	    <span style="constants"><%= step.name %></span>
+	    <span style="constants"><%= step.value %></span>
 	    <span>in</span>
 	    <span style="constants"><%= step.file %>:<%= step.line %></span>
 	  </dt>
