--- a/templates/default/module/html/scenarios.erb
+++ b/templates/default/module/html/scenarios.erb
@@ -5,7 +5,7 @@
 	  <dt>
 		<!-- Show Implied Tags from the Feature -->
 	    <span style="constants"><%= scenario.tags %></span><br/>
-	    Scenario:<span style="constants"><%= scenario.name %></span>
+	    Scenario:<span style="constants"><%= scenario.value %></span>
 	    <span style="constants"><%= scenario.file %>:<%= scenario.line %></span>
 	  </dt>
 	  <dd><pre class="code"><%= scenario.description %></pre></dd>
