FEATURE files are parsed and are now searchable from a tab, similar to Class List, Method List, and File List.  When selecting an item, it takes you to an HTML rendering of the Feature.
+ Rakefile now uses the YARD Raketask
+ Added another example file with periods when I discovered that periods were being treated differently for filenames when trying to create links to files
+ Returned NamespaceObject to class_eval from instance_eval as the tests for it passed but it was not the correct operation to add the properties I wanted to the Namespace instance
+ Cucumber parser got some clean up and fortification in regards to parsing.  Added the tags element as I want to be able to index all features and scenarios by tag.
+ Updated the test suite to be a little more dynamic based on what I defined in member variables.  To allow for me to create expected sets and more quickly verify more file types and arrangements.  Tests are still sorely lacking
+ Template files for parsing features and serializing them to file.  Had trouble adding them to their own directory and maintaining a connection to the css/javascript files that are present in the header.

--- a/templates/default/fulldoc/html/full_list_features.erb
+++ b/templates/default/fulldoc/html/full_list_features.erb
@@ -1,7 +1,7 @@
 <% n = 1 %>
 <% @features.each do |feature| %>
   <li class="r<%= n %>">
-	<a href="<%= feature.name %>"><%= feature.value %></a>
+	<a href="<%= feature.filename %>"><%= feature.value %></a>
   </li>
   <% n = n == 2 ? 1 : 2 %>
 <% end %>
