--- a/templates/default/fulldoc/html/full_list_scenarios.erb
+++ b/templates/default/fulldoc/html/full_list_scenarios.erb
@@ -1,8 +1,8 @@
 <% n = 1 %>
-<% @features.each do |feature| %>
+<% @scenarios.each do |scenario| %>
   <li class="r<%= n %>">
 	<span class='object_link'>
-		<a href="<%= feature.filename %>"><%= feature.value %></a>
+		<a href="<%= scenario.filename %>"><%= scenario.value %></a>
 	</span>
   </li>
   <% n = n == 2 ? 1 : 2 %>
