--- a/templates/default/layout/html/search.erb
+++ b/templates/default/layout/html/search.erb
@@ -1,5 +1,7 @@
 <div id="search">
-  <a id="feature_list_link" href="#">Feature List</a>
+  <a id="feature_list_link" href="#">Features</a>
+  <a id="tag_list_link" href="#">Tags</a>
+  <a id="scenario_list_link" href="#">Scenarios</a>
   <a id="class_list_link" href="#">Class List</a>
   <a id="method_list_link" href="#">Method List</a>
   <a id ="file_list_link" href="#">File List</a>
