--- a/templates/default/layout/html/search.erb
+++ b/templates/default/layout/html/search.erb
@@ -1,6 +1,6 @@
 <div id="search">
   <a id="feature_list_link" href="#">Features</a>
-  <a id="tag_list_link" href="#">Tags</a>
+  <a id="tagusage_list_link" href="#">Tags</a>
   <a id="scenario_list_link" href="#">Scenarios</a>
   <a id="class_list_link" href="#">Class List</a>
   <a id="method_list_link" href="#">Method List</a>
