Added full lists for steps and step definitions Added a little formatting to the tags view. Removed the scenario linking for good and instead just link to features Added more chain linking up the elements to make it easier to traverse Added code in to replace the constants with their regex values in preparation for comparison of step definitions and steps.

--- a/templates/default/fulldoc/html/full_list_scenarios.erb
+++ b/templates/default/fulldoc/html/full_list_scenarios.erb
@@ -2,7 +2,7 @@
 <% @scenarios.each do |scenario| %>
   <li class="r<%= n %>">
 	<span class='object_link'>
-		<a href="<%= scenario.filename %>"><%= scenario.value %></a>
+		<a href="<%= scenario.feature.filename %>"><%= scenario.value %></a>
 	</span>
   </li>
   <% n = n == 2 ? 1 : 2 %>
