--- a/templates/default/fulldoc/html/full_list_tagusages.erb
+++ b/templates/default/fulldoc/html/full_list_tagusages.erb
@@ -4,6 +4,7 @@
 	<span class='object_link'>
 		<a href="<%= uses.filename %>"><%= name %></a>
 	</span>
+	<!-- TODO: Tag count should include those directly affected and those indirectly affected -->
     <small><%= uses.tags.count %></small>
   </li>
   <% n = n == 2 ? 1 : 2 %>
