Added the rudimentary code that searches through all the constants in step definitions and then creates links between the step definitions and the constants. Step definitions have a method to replace any constants with those values.  This explicitly is used in the comparison next when the step definitions are compared to each of the steps and a relationship between those two are establish.
Constants and Step definitions with constants are linked
Steps and Step definitions are linked
Step definitions now appear below the steps in the feature view in future work I'll look to implement a more elegant path.

--- a/templates/default/feature/html/feature.erb
+++ b/templates/default/feature/html/feature.erb
@@ -73,6 +73,7 @@
 			<!-- TODO: Link the step to the step definition -->
 			<!-- TODO: Steps without links should appear different -->
 			<div class="step"><span class="predicate"><%= step.predicate %></span>&nbsp;<%= step.line %></div>
+			<div class="step"><%= step.definition.value if step.definition %></div>
 			<% end %>
 			<% else %>
 			<span>No Steps Defined</span>
