--- a/templates/default/feature/html/feature.erb
+++ b/templates/default/feature/html/feature.erb
@@ -5,7 +5,7 @@
 	</div>
 
 	<div class="meta">
-		<%= @feature.files.first.first %>
+		<div class="file"><%= @feature.files.first.first %></div>
 		<div class="tags">
 			<% @feature.tags.each do |tag| %>
 			<a href="tag_<%= tag.value %>.html"><%= tag.value %></a>
@@ -18,26 +18,35 @@
 	</div>
 
 	<% if @feature.background %>
-	<div class="background">
+	
+	<script type="text/javascript" charset="utf-8">
+		$(function() {
+
+		$('#background .toggle').click(function() {
+			$("#backgroundSteps").toggle('blind');
+
+			var stateIndicator = $('#background a.toggle')[0]
+
+			stateIndicator.innerHTML = (stateIndicator.innerHTML === '+' ? '-' : '+'); 
+			return false;
+		})
+	});
+	</script>
+	
+	<div id="background">
 		<div class="title">
-			<span class="pre">Background:</span>
-			<!--<span class="name"><%= @feature.background.value %></span>-->
+			<a class="toggle">-</a>
+			<span class="pre">Background</span>
 		</div>
-		<% unless @feature.background.tags.empty? %>
-		<!--<div class="tags"><%= @feature.background.tags.collect { |tags| tags.value }.join("&nbsp;&nbsp;") %></div>-->		
-		<% end%>
 		<% unless @feature.background.description.empty? %>
 		<div class="description">
 			<%= @feature.background.description.join("\n<br/>") %>
 		</div>
 		<% end %>
-		<div class="steps">
+		<div id="backgroundSteps" class="steps">
 			<% if @feature.background.steps %>
-			<% @feature.background.steps.each do |step| %>
-			<!-- TODO: Style the first word differently -->
-			<!-- TODO: Link the step to the step definition -->
-			<!-- TODO: Steps without links should appear different -->
-			<div class="step"><span class="predicate"><%= step.predicate %></span>&nbsp;<%= step.line %></div>
+			<% @feature.background.steps.each_with_index do |step,index| %>
+			<div class="step <%= (index + 1) % 2 == 0 ? 'even' : 'odd' %>"><span class="predicate"><%= step.predicate %></span>&nbsp;<%= step.line %></div>
 			<% end %>
 			<% else %>
 			<span>No Steps Defined</span>
@@ -48,9 +57,25 @@
 	<% end %> 
 
 	<% if @feature.scenarios %>
-	<% @feature.scenarios.each do |scenario| %>
-	<div class="scenario">
+	<% @feature.scenarios.each_with_index do |scenario,scenario_index| %>
+	
+	<script type="text/javascript" charset="utf-8">
+		$(function() {
+
+		$('#scenario<%=scenario_index%> .toggle').click(function() {
+			$("#scenario<%=scenario_index%>Steps").toggle('blind');
+
+			var stateIndicator = $('#scenario<%=scenario_index%> a.toggle')[0]
+
+			stateIndicator.innerHTML = (stateIndicator.innerHTML === '+' ? '-' : '+'); 
+			return false;
+		})
+	});
+	</script>
+	
+	<div <%= "id='scenario#{scenario_index}'" %>  class="scenario">
 		<div class="title">
+			<a class="toggle">-<a>
 			<span class="pre">Scenario:</span>
 			<span class="name"><%= scenario.value %></span>
 		</div>
@@ -66,13 +91,16 @@
 			<%= scenario.description.join("\n<br/>") %>
 		</div>
 		<% end %>
-		<div class="steps">
+		
+		<div <%= "id='scenario#{scenario_index}Steps'" %> class="steps">
 			<% if scenario.steps %>
-			<% scenario.steps.each do |step| %>
+			<% scenario.steps.each_with_index do |step,index| %>
 			<!-- TODO: Style the first word differently -->
 			<!-- TODO: Link the step to the step definition -->
 			<!-- TODO: Steps without links should appear different -->
-			<div class="step"><span class="predicate"><%= step.predicate %></span>&nbsp;<%= step.line %></div>
+			<div class="step <%= (index + 1) % 2 == 0 ? 'even' : 'odd' %>">
+				<span class="predicate"><%= step.predicate %></span>&nbsp;<%= step.line %>
+			</div>
 			<div class="step"><%= step.definition.value if step.definition %></div>
 			<% end %>
 			<% else %>
