--- a/templates/default/fulldoc/html/full_list_features.erb
+++ b/templates/default/fulldoc/html/full_list_features.erb
@@ -4,6 +4,7 @@
 	<span class='object_link'>
 		<a href="<%= feature.filename %>"><%= feature.value %></a>
 	</span>
+	<span class="">(<%= feature.files.first.first %>)<span>
   </li>
   <% n = n == 2 ? 1 : 2 %>
 <% end %>
