--- a/templates/default/tagusage/html/tagusage.erb
+++ b/templates/default/tagusage/html/tagusage.erb
@@ -2,61 +2,64 @@
 	<div class="title">
 		<span class="pre">Tag:</span>
 		<span class="name"><%= @tags.tags.first.value %></span>
+		
 	</div>
-	<!-- TODO: this should be re-factored so that the difference is just the indirect/direct -->
+	
+	<div class="meta">
+		<div class="file">Usage: 
+		<%= @tag_usage[:features] > 0 ? "#{@tag_usage[:features]} feature#{@tag_usage[:features] > 1 ? 's' : ''} (with #{@tag_usage[:indirect_scenarios]} scenario#{@tag_usage[:indirect_scenarios] > 1 ? 's' : ''})" : "" %>
+		<%= " and " if @tag_usage[:features] > 0 && @tag_usage[:direct_scenarios] > 0 %>
+		<%= @tag_usage[:direct_scenarios] > 0 ? "#{@tag_usage[:direct_scenarios]} scenario#{@tag_usage[:direct_scenarios] > 1 ? 's' : ''}" : "" %>
+		</div>		
+	</div>
+	
 	<% if @tags.tags %>
 	<% @tags.tags.each do |tag| %>
-		<% if tag.scenario %>
-		<div class="member">
-			
-			<div class="feature indirect">
-				<div class="title">
-					<span class="pre">Feature:</span>
-					<span class="name">
-						<a href="<%= tag.scenario.feature.filename %>"><%= tag.scenario.feature.value %></a>
-					</span>
-				</div>
-				<div class="description"><%= tag.scenario.feature.description.join("\n") %></div>
-			</div>
-			
-			<div class="scenario direct">
-				<div class="title">
-					<span class="pre">Scenario:</span>
-					<span class="name">
-						<a href="<%= tag.scenario.feature.filename %>"><%= tag.scenario.value %></a>
-					</span>
-				</div>
-				<div class="description"><%= tag.scenario.description.join("\n") %></div>
-			</div>
-				
+
+	<% if tag.scenario %>
+	<div class="feature indirect">
+		<div class="title">
+			<span class="pre">Feature:</span>
+			<span class="name">
+				<a href="<%= tag.scenario.feature.filename %>"><%= tag.scenario.feature.value %></a>
+			</span>
 		</div>
-		<% else %>
-		<div class="member">
-			
-			<div class="feature direct">
-				<div class="title">
-					<span class="pre">Feature:</span>
-					<span class="name">
-						<a href="<%= tag.feature.filename %>"><%= tag.feature.value %></a>
-					</span>
-				</div>
-				<div class="description"><%= tag.feature.description.join("\n") %></div>
-			</div>
-			
-			<% tag.feature.scenarios.each do |scenario| %>
-			<div class="scenario indirect">
-				<div class="title">
-					<span class="pre">Scenario:</span>
-					<span class="name">
-						<a href="<%= scenario.feature.filename %>"><%= scenario.value %></a>
-					</span>
-				</div>
-				<div class="description"><%= scenario.description.join("\n") %></div>
-			</div>
-			<% end %>
+		<div class="description"><%= tag.scenario.feature.description.join("\n") %></div>
+	</div>
+
+	<div class="scenario direct">
+		<div class="title">
+			<span class="pre">Scenario:</span>
+			<span class="name">
+				<a href="<%= tag.scenario.feature.filename %>"><%= tag.scenario.value %></a>
+			</span>
 		</div>
-		<% end %>
-	
+		<div class="description"><%= tag.scenario.description.join("\n") %></div>
+	</div>
+	<% else %>
+	<div class="feature direct">
+		<div class="title">
+			<span class="pre">Feature:</span>
+			<span class="name">
+				<a href="<%= tag.feature.filename %>"><%= tag.feature.value %></a>
+			</span>
+		</div>
+		<div class="description"><%= tag.feature.description.join("\n") %></div>
+	</div>
+
+	<% tag.feature.scenarios.each do |scenario| %>
+	<div class="scenario indirect">
+		<div class="title">
+			<span class="pre">Scenario:</span>
+			<span class="name">
+				<a href="<%= scenario.feature.filename %>"><%= scenario.value %></a>
+			</span>
+		</div>
+		<div class="description"><%= scenario.description.join("\n") %></div>
+	</div>
+	<% end %>
+	<% end %>
+
 	<% end %>
 	<% end%>
 </div>
