--- a/templates/default/fulldoc/html/full_list_tagusages.erb
+++ b/templates/default/fulldoc/html/full_list_tagusages.erb
@@ -1,10 +1,10 @@
 <% n = 1 %>
-<% @tags.each do |name,uses| %>
+<% @tagusage.each do |usage| %>
   <li class="r<%= n %>">
 	<span class='object_link'>
-		<a href="<%= uses.filename %>"><%= name %></a>
+		<a href="<%= usage.filename %>"><%= usage.value %></a>
 	</span>
-	<small><%= uses.tags.count %></small>
+	<small><%= usage.total_scenario_count %></small>
   </li>
   <% n = n == 2 ? 1 : 2 %>
 <% end %>
